package dev.nymann.sensor;

public interface ISensor {
    String getName();

    Double getValue();
}
