@startuml
skinparam roundCorner 10
skinparam shadowing false
skinparam classFontName Lato
skinparam classFontSize 16
skinparam defaultFontName Source Code Pro
skinparam defaultFontSize 14
skinparam ClassAttributeFontStyle normal
skinparam ClassBackgroundColor white
skinparam ClassBorderColor black
skinparam ClassBorderThickness 1
skinparam ArrowColor black
skinparam linetype polyline
interface dev.nymann.sensor.ISensor {

~ String getName()
~ Double getValue()
}
class dev.nymann.sensor.CO2SensorAdapter {
- CO2Sensor co2Sensor
+ String getName()
+ Double getValue()
+ void start()
+ void stop()
}
class dev.nymann.sensor.TemperatureSensorAdapter {
- TemperatureSensor temperatureSensor
- String name
+ String getName()
+ Double getValue()
+ void start()
+ void stop()
}
abstract class dev.nymann.sensor.Sensor {
+ {abstract}void start()
+ {abstract}void stop()
}


dev.nymann.sensor.Sensor <|-- dev.nymann.sensor.CO2SensorAdapter
dev.nymann.sensor.Sensor <|-- dev.nymann.sensor.TemperatureSensorAdapter
dev.nymann.sensor.ISensor <|.. dev.nymann.sensor.Sensor
@enduml